fix: box-shadow on banner not showing up

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,8 @@
   align-items: end;
   gap: 20px;
   padding: 15px 50px;
-  box-shadow: 0px 6px 6px 4px #b8b8b880;
+  box-shadow: 0px 5px 5px 0px #3636364f;
+  position: relative;
 }
 .nav-search {
   display: flex;
